# WorldCupPredictor

./: .gitignore  README.md  predict.py  pyproject.toml  requirements.txt  track_results.py
.kiro/specs/react-prediction-dashboard/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/world-cup-predictor/: .config.kiro  design.md  requirements.md  tasks.md
backend/: __init__.py  error_handling.py  main.py  schemas.py  services.py  services_arbitrage.py
backend/routes/: __init__.py  arbitrage.py  groups.py  knockout.py  predictions.py
backend/tests/: test_error_handling.py  test_groups.py  test_knockout_verify.py  test_properties.py
data/: fifa_rankings.csv  saved_predictions.csv
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  types.ts
frontend/src/__tests__/: properties.test.tsx  setup.test.ts
frontend/src/components/: ArbitrageScanner.css  ArbitrageScanner.tsx  GroupStageView.css  GroupStageView.tsx  HedgeBetCalculator.css  HedgeBetCalculator.tsx  KnockoutBracketView.css  KnockoutBracketView.test.tsx  KnockoutBracketView.tsx  MatchPredictionCard.css  MatchPredictionCard.test.tsx  MatchPredictionCard.tsx  TeamCard.test.tsx  TeamCard.tsx
src/: __init__.py  api_client.py  data_pipeline.py  exceptions.py  feature_engine.py  goals_model.py  historical_data.py  main.py  model.py  predictor.py  scaler.py
tests/: conftest.py  strategies.py  test_api_client.py  test_data_pipeline.py  test_exceptions.py  test_feature_engine.py  test_model.py  test_predictor.py  test_scaler.py
